--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -292,7 +292,7 @@
               href: log-query/query-optimization.md
             - name: 分析文本数据
               href: log-query/parse-text.md
-        - name: 工作区
+        - name: 工作区和群集
           items:
             - name: 设计工作区部署
               href: platform/design-logs-deployment.md
@@ -312,6 +312,8 @@
               href: platform/service-providers.md
             - name: 管理访问权限
               href: platform/manage-access.md
+            - name: 专用群集
+              href: log-query/logs-dedicated-clusters.md
     - name: 指标资源管理器
       items:
         - name: 指标资源管理器入门
@@ -638,7 +640,7 @@
                 - name: Spring Boot 应用
                   displayname: java
                   href: /java/azure/spring-framework/configure-spring-boot-java-applicationinsights
-                - name: 故障排除
+                - name: 疑难解答
                   href: app/java-troubleshoot.md
             - name: Node.js
               href: app/nodejs.md
