--- a/articles/logic-apps/index.yml
+++ b/articles/logic-apps/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: ecfan
   ms.author: estfan; logicappspm
   ms.date: 09/18/2019
-  ms.openlocfilehash: 1b3d77631e547038c3efc4589727c0ba2d7a7006
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: c7917fc97ec84862387e629701f444df9ad619f3
+  ms.sourcegitcommit: a0c4499034c405ebc576e5e9ebd65084176e51e4
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87086415"
+  ms.lasthandoff: 09/29/2020
+  ms.locfileid: "91460282"
 landingContent:
 - title: 关于 Azure 逻辑应用
   linkLists:
@@ -131,6 +131,8 @@ landingContent:
       url: logic-apps-create-azure-resource-manager-templates.md
     - text: 部署逻辑应用模板
       url: logic-apps-deploy-azure-resource-manager-templates.md
+    - text: 从 Power Automate 和 Power Apps 调用逻辑应用
+      url: call-logic-apps-from-power-automate-power-apps.md
   - linkListType: learn
     links:
     - text: 使用资源管理器模板创建和部署
