--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -137,7 +137,7 @@
         - name: 数据处理
           href: concept-optimize-data-processing.md
     - name: 模型定型
-      displayName: 'run config, estimator, machine learning pipeline, ml pipeline, train model'
+      displayName: 'run config, machine learning pipeline, ml pipeline, train model'
       href: concept-train-machine-learning-model.md
     - name: 分布式训练
       displayName: 'parallellization, deep learning, deep neural network, dnn'
@@ -319,16 +319,12 @@
               href: how-to-differential-privacy.md
     - name: 训练模型
       items:
-        - name: 提交定型运行任务
-          displayName: 'run config, compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
+        - name: 配置和提交训练运行
+          displayName: 'run config, script run config, scriptrunconfig, compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
           href: how-to-set-up-training-targets.md
-        - name: 将估算器用于 ML
-          items:
-            - name: 在训练期间创建估算器
-              href: how-to-train-ml-models.md
-            - name: 优化超参数
-              displayName: parameter
-              href: how-to-tune-hyperparameters.md
+        - name: 优化超参数
+          displayName: 'parameter, hyperparameter, hyperdrive'
+          href: how-to-tune-hyperparameters.md
         - name: 使用 MLflow
           items:
             - name: 使用 MLflow 对试验进行跟踪
