--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -40,6 +40,8 @@
   items:
     - name: 启用 Azure VMware 解决方案
       href: enable-azure-vmware-solution.md
+    - name: 通过预留实例节约成本
+      href: reserved-instance.md
     - name: 迁移评估
       href: ../migrate/how-to-create-azure-vmware-solution-assessment.md?context=/azure/migrate/context/migrate-context.json
     - name: 设置 HCX
