--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -196,6 +196,8 @@
               href: search-howto-index-csv-blobs.md
             - name: 为 JSON Blob 创建索引
               href: search-howto-index-json-blobs.md
+            - name: 为加密的 Blob 创建索引
+              href: search-howto-index-encrypted-blobs.md
         - name: Azure 表
           href: search-howto-indexing-azure-tables.md
         - name: Azure Cosmos DB
@@ -401,7 +403,7 @@
 - name: 参考
   items:
     - name: Azure CLI
-      href: /cli/azure/search?view=azure-cli-latest
+      href: /cli/azure/search
     - name: Azure PowerShell
       href: /powershell/module/az.search
     - name: 资源管理器模板
