commit translated contents

--- a/articles/azure-netapp-files/index.yml
+++ b/articles/azure-netapp-files/index.yml
@@ -8,13 +8,13 @@ metadata:
   ms.topic: landing-page
   author: b-juche
   ms.author: b-juche
-  ms.date: 03/11/2020
-  ms.openlocfilehash: bcca681fcae02df3e3521b48f710acd36127c882
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.date: 08/25/2020
+  ms.openlocfilehash: f44cd7bc6269a7efbaaaaf2788f660363bafcbac
+  ms.sourcegitcommit: f796e1b7b46eb9a9b5c104348a673ad41422ea97
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "79369046"
+  ms.lasthandoff: 09/30/2020
+  ms.locfileid: "91567836"
 landingContent:
 - title: 关于 Azure NetApp 文件
   linkLists:
@@ -22,6 +22,8 @@ landingContent:
     links:
     - text: 什么是 Azure NetApp 文件？
       url: azure-netapp-files-introduction.md
+    - text: 新增功能
+      url: whats-new.md
     - text: 了解存储层次结构
       url: azure-netapp-files-understand-storage-hierarchy.md
   - linkListType: concept
