--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -44,6 +44,10 @@
       items:
         - name: 流量管理器使用的国家/地区层次结构
           href: traffic-manager-geographic-regions.md
+    - name: 安全性
+      items:
+        - name: 安全基线
+          href: security-baseline.md
     - name: 嵌套式流量管理器配置文件
       href: traffic-manager-nested-profiles.md
     - name: 终结点类型
@@ -98,7 +102,7 @@
           href: traffic-manager-subnet-override-cli.md
         - name: 配置子网替代 - PowerShell
           href: traffic-manager-subnet-override-powershell.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 排查 Azure 流量管理器中出现降级状态的问题
           href: traffic-manager-troubleshooting-degraded.md
